<resources>
    <string name="app_name">PLASTO App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_splash">PLASTO</string>
    <string name="title_activity_edit_dealer">Edit Dealer</string>
    <string name="title_activity_dashboard">PLASTO</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="addDealer">Add Dealer</string>
    <string name="profile">Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dealerList">Dealers List</string>
    <string name="title_main_dashboard">PLASTO</string>
    <string name="dayEndReport">Day End Report</string>
    <string name="title_activity_dealer_details">DealerDetailsActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

</resources>
